# minimum-dominating-set

./: .gitignore  CMakeLists.txt  Install.md  README.md  loginfo_bremen_subgraph_20.gr  score.txt
htd/include/htd/: CompilerDetection.hpp
src/: minimum-dominating-set.cpp  minimum-dominating-set.h  reduce.cpp  reduce.h  sat_solver.cpp  sat_solver.h  solver.cpp  solver.h  timer.cpp
src/graph/: context.cpp  context.h  generate_tree_decomposition.cpp  generate_tree_decomposition.h  graph_io.cpp  graph_io.h  nice_tree_decomposition.cpp  nice_tree_decomposition.h  tree_decomposition.cpp  tree_decomposition.h  treewidth_solver.cpp  treewidth_solver.h
src/util/: logger.cpp  logger.h  timer.cpp  timer.h
